# tradekit

./: .buildinfo  .buildinfo.bak  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  tradekit.data.html  tradekit.exec_rules.event_rules.html  tradekit.exec_rules.html  tradekit.exec_rules.profit.html  tradekit.exec_rules.stop.html  tradekit.fees.html  tradekit.forward_engine.html  tradekit.html  tradekit.metrics.html  tradekit.notifiers.html  tradekit.strategies.html  tradekit.utils.html  tradekit.visuals.html  user_guide.html
_modules/: index.html
_modules/tradekit/forward_engine/: engine.html  (+1 more)
_sources/: templates.rst.txt  tradekit.exec_rules.profit.rst.txt  tradekit.fees.rst.txt  user_guide.rst.txt
docs/source/: conf.py  index.rst  tradekit.exec_rules.event_rules.rst  tradekit.exec_rules.rst  tradekit.exec_rules.stop.rst  tradekit.notifiers.rst  tradekit.rst  tradekit.utils.rst
src/tradekit/: __init__.py
src/tradekit.egg-info/: PKG-INFO  requires.txt  top_level.txt
src/trading_engine.egg-info/: PKG-INFO  SOURCES.txt
templates/: ma_engine.json  ma_engine_trades.jsonl  test_notebook.ipynb  trade_test.ipynb
templates/my_date_rules/: day.py  time_interval.py
templates/my_event_rules/: earnings.py
templates/my_fees/: broker_a.py
templates/my_profit_rules/: constant.py  static.py
templates/my_stop_rules/: constant.py  dynamic.py  pair_pca.py  pair_spread.py  static.py  var_dynamic.py
templates/my_strategies/: ma_crossover.py
templates/my_volume_rules/: interval.py
(+49 files in other folders)
